--- a/index.html
+++ b/index.html
@@ -208,19 +208,7 @@
                 </section>
                 <section id="FUENTES">
                     <h2>FUENTES</h2>
-                    <a href="https://developer.mozilla.org/es/docs/Learn/Getting_started_with_the_web/CSS_basics"
-                        target="_blank">Conceptos Basicos
-                    </a>
-                    <a href="https://www.w3schools.com/css/css_intro.asp" target="_blank">Conceptos basicos 3w
-                    </a>
-                    <a href="https://developer.mozilla.org/es/docs/Web/CSS/Pseudo-classes" target="_blank">Pseudo Clases
-                    </a>
-                    <a href="https://developer.mozilla.org/es/docs/Web/CSS/display" target=_blank>Display
-                    </a>
-                    <a href="https://css-tricks.com/almanac/selectors/h/hover/" target="_blank">Hover</a>
-                    <a href="https://developer.mozilla.org/es/docs/Web/CSS/display" target="_blank">display</a>
-                    <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/overflow-x" target="_blank">overflox-x
-                        (desbordamiento)</a>
+                    <a href="https://www.youtube.com/watch?v=4ldvBM0unr0&list=PLHmKCsI2eZS_r61mkDHNl34FJHDHnsg12&index=2&t=1171s&ab_channel=ElIngeFrancisco" target="_blank">Como hacer un Formulario de ingreso de datos</a>
                 </section>
             </article>
             <aside class="ladoder">
