i don know what i did

--- a/index.html
+++ b/index.html
@@ -140,9 +140,10 @@
                 <section id="INTRO">
                     <h2>INTRO</h2>
                     <p>
-                        <b>CSS</b>es un lenguaje de hojas de estilo, es decir, te permite aplicar estilos de manera
-                        selectiva a elementos en
-                        documentos HTML.
+                        <b>VISUAL BASIC</b> es un lenguaje de programación orientado a objetos desarrollado por Microsoft. El uso de Visual Basic
+                        agiliza y simplifica la creación de aplicaciones .NET con seguridad de tipos.
+                        <a href="https://learn.microsoft.com/es-es/dotnet/visual-basic/" target="_blank">INFO...</a>
+
                     </p>
                 </section>
                 <section id="APUNTESIMÁGENES">
@@ -208,7 +209,7 @@
                 </section>
                 <section id="FUENTES">
                     <h2>FUENTES</h2>
-                    <a href="https://www.youtube.com/watch?v=4ldvBM0unr0&list=PLHmKCsI2eZS_r61mkDHNl34FJHDHnsg12&index=2&t=1171s&ab_channel=ElIngeFrancisco" target="_blank">Como hacer un Formulario de ingreso de datos</a>
+                    <a href="https://learn.microsoft.com/es-es/dotnet/visual-basic/" target="_blank">Visual Basic</a>
                 </section>
             </article>
             <aside class="ladoder">
